贷款比例可输入

--- a/app.json
+++ b/app.json
@@ -9,6 +9,6 @@
     "backgroundTextStyle": "dark",
     "backgroundColor": "#f7f7f7",
     "navigationBarTitleText": "mortgage"
-  }
-   
+  },
+  "sitemapLocation": "sitemap.json"
 }
